@@ -1,5 +1,6 @@
 package com.example.controller;
 
+import com.example.service.GlobalKTableRegistry;
 import com.example.service.KafkaStateStoreService;
 import org.apache.kafka.streams.state.ReadOnlyKeyValueStore;
 import org.junit.jupiter.api.Test;
@@ -9,7 +10,7 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.ResponseEntity;
 
-import java.util.Collections;
+import java.util.Map;
 import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -23,97 +24,189 @@ class StoreControllerTest {
     private KafkaStateStoreService kafkaStateStoreService;
 
     @Mock
+    private GlobalKTableRegistry globalKTableRegistry;
+
+    @Mock
     private ReadOnlyKeyValueStore<String, Object> keyValueStore;
 
     @InjectMocks
     private StoreController storeController;
 
     @Test
-    @SuppressWarnings("unchecked")
     void getAllStores_shouldReturnStoreNames() {
-        Set<String> expectedStores = Collections.singleton("test-store");
+        // Given
+        Set<String> expectedStores = Set.of("user-store", "product-store");
         when(kafkaStateStoreService.getAllStoreNames()).thenReturn(expectedStores);
 
+        // When
         ResponseEntity<Set<String>> response = storeController.getAllStores();
 
+        // Then
         assertEquals(200, response.getStatusCodeValue());
         assertEquals(expectedStores, response.getBody());
+        verify(kafkaStateStoreService).getAllStoreNames();
     }
 
     @Test
     void getAllStores_shouldReturn500OnError() {
-        when(kafkaStateStoreService.getAllStoreNames()).thenThrow(new RuntimeException());
+        // Given
+        when(kafkaStateStoreService.getAllStoreNames()).thenThrow(new RuntimeException("Registry error"));
 
+        // When
         ResponseEntity<Set<String>> response = storeController.getAllStores();
 
+        // Then
         assertEquals(500, response.getStatusCodeValue());
         assertNull(response.getBody());
+        verify(kafkaStateStoreService).getAllStoreNames();
     }
 
     @Test
-    @SuppressWarnings("unchecked")
     void getStoreNameById_shouldReturnValueWhenFound() {
-        String storeName = "test-store";
+        // Given
+        String storeName = "user-store";
         String id = "123";
-        Object expectedValue = "test-value";
-        when(kafkaStateStoreService.<Object, String>getStore(anyString())).thenReturn(keyValueStore);
+        Object expectedValue = "test-user";
+        when(globalKTableRegistry.isRegistered(storeName)).thenReturn(true);
+        when(kafkaStateStoreService.<Object, String>getStore(storeName)).thenReturn(keyValueStore);
         when(keyValueStore.get(id)).thenReturn(expectedValue);
 
+        // When
         ResponseEntity<Object> response = storeController.getStoreNameById(storeName, id);
 
+        // Then
         assertEquals(200, response.getStatusCodeValue());
         assertEquals(expectedValue, response.getBody());
+        verify(globalKTableRegistry).isRegistered(storeName);
+        verify(kafkaStateStoreService).getStore(storeName);
+        verify(keyValueStore).get(id);
     }
 
     @Test
-    @SuppressWarnings("unchecked")
-    void getStoreNameById_shouldReturn404WhenNotFound() {
-        String storeName = "test-store";
+    void getStoreNameById_shouldReturn404WhenStoreNotRegistered() {
+        // Given
+        String storeName = "unknown-store";
         String id = "123";
-        when(kafkaStateStoreService.<Object, String>getStore(anyString())).thenReturn(keyValueStore);
+        when(globalKTableRegistry.isRegistered(storeName)).thenReturn(false);
+
+        // When
+        ResponseEntity<Object> response = storeController.getStoreNameById(storeName, id);
+
+        // Then
+        assertEquals(404, response.getStatusCodeValue());
+        verify(globalKTableRegistry).isRegistered(storeName);
+        verify(kafkaStateStoreService, never()).getStore(anyString());
+        verify(keyValueStore, never()).get(anyString());
+    }
+
+    @Test
+    void getStoreNameById_shouldReturn404WhenValueNotFound() {
+        // Given
+        String storeName = "user-store";
+        String id = "123";
+        when(globalKTableRegistry.isRegistered(storeName)).thenReturn(true);
+        when(kafkaStateStoreService.<Object, String>getStore(storeName)).thenReturn(keyValueStore);
         when(keyValueStore.get(id)).thenReturn(null);
 
+        // When
         ResponseEntity<Object> response = storeController.getStoreNameById(storeName, id);
 
+        // Then
         assertEquals(404, response.getStatusCodeValue());
+        verify(globalKTableRegistry).isRegistered(storeName);
+        verify(kafkaStateStoreService).getStore(storeName);
+        verify(keyValueStore).get(id);
     }
 
     @Test
-    @SuppressWarnings("unchecked")
     void getStoreNameById_shouldReturn500OnError() {
-        String storeName = "test-store";
+        // Given
+        String storeName = "user-store";
         String id = "123";
-        when(kafkaStateStoreService.<Object, String>getStore(anyString())).thenThrow(new RuntimeException());
+        when(globalKTableRegistry.isRegistered(storeName)).thenReturn(true);
+        when(kafkaStateStoreService.<Object, String>getStore(storeName)).thenThrow(new RuntimeException("Store error"));
 
+        // When
         ResponseEntity<Object> response = storeController.getStoreNameById(storeName, id);
 
+        // Then
         assertEquals(500, response.getStatusCodeValue());
         assertNull(response.getBody());
+        verify(globalKTableRegistry).isRegistered(storeName);
+        verify(kafkaStateStoreService).getStore(storeName);
+        verify(keyValueStore, never()).get(anyString());
     }
 
     @Test
-    @SuppressWarnings("unchecked")
     void getStoreCount_shouldReturnCount() {
-        String storeName = "test-store";
+        // Given
+        String storeName = "user-store";
         long expectedCount = 42L;
-        when(kafkaStateStoreService.<Object, String>getStore(anyString())).thenReturn(keyValueStore);
+        when(globalKTableRegistry.isRegistered(storeName)).thenReturn(true);
+        when(kafkaStateStoreService.<Object, String>getStore(storeName)).thenReturn(keyValueStore);
         when(keyValueStore.approximateNumEntries()).thenReturn(expectedCount);
 
+        // When
         ResponseEntity<Object> response = storeController.getStoreCount(storeName);
 
+        // Then
         assertEquals(200, response.getStatusCodeValue());
         assertEquals(expectedCount, response.getBody());
+        verify(globalKTableRegistry).isRegistered(storeName);
+        verify(kafkaStateStoreService).getStore(storeName);
+        verify(keyValueStore).approximateNumEntries();
     }
 
     @Test
-    @SuppressWarnings("unchecked")
-    void getStoreCount_shouldReturn500OnError() {
-        String storeName = "test-store";
-        when(kafkaStateStoreService.<Object, String>getStore(anyString())).thenThrow(new RuntimeException());
+    void getStoreCount_shouldReturn404WhenStoreNotRegistered() {
+        // Given
+        String storeName = "unknown-store";
+        when(globalKTableRegistry.isRegistered(storeName)).thenReturn(false);
 
+        // When
         ResponseEntity<Object> response = storeController.getStoreCount(storeName);
 
+        // Then
+        assertEquals(404, response.getStatusCodeValue());
+        verify(globalKTableRegistry).isRegistered(storeName);
+        verify(kafkaStateStoreService, never()).getStore(anyString());
+        verify(keyValueStore, never()).approximateNumEntries();
+    }
+
+    @Test
+    void getStoreCount_shouldReturn500OnError() {
+        // Given
+        String storeName = "user-store";
+        when(globalKTableRegistry.isRegistered(storeName)).thenReturn(true);
+        when(kafkaStateStoreService.<Object, String>getStore(storeName)).thenThrow(new RuntimeException("Store error"));
+
+        // When
+        ResponseEntity<Object> response = storeController.getStoreCount(storeName);
+
+        // Then
         assertEquals(500, response.getStatusCodeValue());
         assertNull(response.getBody());
+        verify(globalKTableRegistry).isRegistered(storeName);
+        verify(kafkaStateStoreService).getStore(storeName);
+        verify(keyValueStore, never()).approximateNumEntries();
+    }
+
+    @Test
+    void getStoreCount_shouldReturnZeroWhenStoreEmpty() {
+        // Given
+        String storeName = "user-store";
+        when(globalKTableRegistry.isRegistered(storeName)).thenReturn(true);
+        when(kafkaStateStoreService.<Object, String>getStore(storeName)).thenReturn(keyValueStore);
+        when(keyValueStore.approximateNumEntries()).thenReturn(0L);
+
+        // When
+        ResponseEntity<Object> response = storeController.getStoreCount(storeName);
+
+        // Then
+        assertEquals(200, response.getStatusCodeValue());
+        assertEquals(0L, response.getBody());
+        verify(globalKTableRegistry).isRegistered(storeName);
+        verify(kafkaStateStoreService).getStore(storeName);
+        verify(keyValueStore).approximateNumEntries();
     }
 }
